# anomaly_detection

./: LICENSE  Makefile  README.md  pyproject.toml
artifacts/preds/: preds.json
configs/: classical_ssim.yaml
docker/: Dockerfile
src/adlib/: classical.py  data.py  utils.py  viz.py
src/adlib/cli/: eval.py  fit.py  infer.py  report.py
tests/: test_smoke.py
